k8s/platform/networking/gateway/gateway.yaml
# yaml-language-server:$schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gw
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.10.49
  listeners:
    - name: http
      port: 80
      protocol: HTTP

    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.k8s.u74n.internal"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: k8s-wildcard-tls
            namespace: cert-manager
